--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.69.0",
+    "jest": "^22.4.3",
     "prettier": "1.12.0"
   }
 }
