--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "css-box-model",
   "version": "0.0.1",
   "description": "Returns the css box model for a HTMLElement",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "yarn jest"
   },
