--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "css-box-model",
   "version": "0.0.3",
   "description": "Returns the css box model for a HTMLElement",
-  "main": "src/index.js",
+  "main": "dist/css-box-model.cjs.js",
+  "module": "dist/css-box-model.esm.js",
+  "sideEffects": false,
   "scripts": {
     "test": "yarn jest",
     "lint": "yarn prettier --debug-check src/** test/**",
     "typecheck": "yarn flow",
     "validate": "yarn lint && yarn flow",
     "build:clean": "rimraf dist",
-    "build:flow": "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
+    "build:flow":
+      "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
     "build:dist": "yarn rollup --config rollup.config.js",
     "build": "yarn build:clean && yarn build:dist && yarn build:flow",
     "prepublishOnly": "yarn build"
