--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "css-box-model",
   "version": "0.0.8",
   "description": "Returns the css box model for a HTMLElement",
+  "author": "Alex Reardon <alexreardon@gmail.com>",
+  "license": "MIT",
+  "keywords": ["css", "box model", "DOM"],
   "main": "dist/css-box-model.cjs.js",
   "module": "dist/css-box-model.esm.js",
   "sideEffects": false,
@@ -11,13 +14,12 @@
     "typecheck": "yarn flow",
     "validate": "yarn lint && yarn flow",
     "build:clean": "rimraf dist",
-    "build:flow": "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
+    "build:flow":
+      "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
     "build:dist": "yarn rollup --config rollup.config.js",
     "build": "yarn build:clean && yarn build:dist && yarn build:flow",
     "prepublishOnly": "yarn build"
   },
-  "author": "Alex Reardon <alexreardon@gmail.com>",
-  "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
