--- a/package.json
+++ b/package.json
@@ -4,15 +4,8 @@
   "description": "Returns the css box model for a HTMLElement",
   "author": "Alex Reardon <alexreardon@gmail.com>",
   "license": "MIT",
-  "keywords": [
-    "css",
-    "box model",
-    "DOM"
-  ],
-  "files": [
-    "/dist",
-    "/src"
-  ],
+  "keywords": ["css", "box model", "DOM"],
+  "files": ["/dist", "/src"],
   "main": "dist/css-box-model.cjs.js",
   "module": "dist/css-box-model.esm.js",
   "sideEffects": false,
@@ -22,23 +15,24 @@
     "typecheck": "yarn flow",
     "validate": "yarn lint && yarn flow",
     "build:clean": "rimraf dist",
-    "build:flow": "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
+    "build:flow":
+      "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
     "build:dist": "yarn rollup --config rollup.config.js",
     "build": "yarn build:clean && yarn build:dist && yarn build:flow",
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.70.0",
-    "jest": "^22.4.3",
-    "prettier": "1.12.0",
+    "flow-bin": "^0.74.0",
+    "jest": "^23.1.0",
+    "prettier": "1.13.4",
     "rimraf": "^2.6.2",
-    "rollup": "^0.58.1",
-    "rollup-plugin-babel": "^3.0.3"
+    "rollup": "^0.60.1",
+    "rollup-plugin-babel": "^3.0.4"
   }
 }
