--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "css-box-model",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "Returns the css box model for a HTMLElement",
   "author": "Alex Reardon <alexreardon@gmail.com>",
   "license": "MIT",
-  "keywords": ["css", "box model", "DOM"],
-  "files": ["/dist", "/src"],
+  "keywords": [
+    "css",
+    "box model",
+    "DOM"
+  ],
+  "files": [
+    "/dist",
+    "/src"
+  ],
   "main": "dist/css-box-model.cjs.js",
   "module": "dist/css-box-model.esm.js",
   "sideEffects": false,
@@ -15,8 +22,7 @@
     "typecheck": "yarn flow",
     "validate": "yarn lint && yarn flow",
     "build:clean": "rimraf dist",
-    "build:flow":
-      "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
+    "build:flow": "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
     "build:dist": "yarn rollup --config rollup.config.js",
     "build": "yarn build:clean && yarn build:dist && yarn build:flow",
     "prepublishOnly": "yarn build"
