--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.74.0",
-    "jest": "^23.1.0",
-    "prettier": "1.13.4",
+    "flow-bin": "^0.75.0",
+    "jest": "^23.2.0",
+    "prettier": "1.13.7",
     "rimraf": "^2.6.2",
-    "rollup": "^0.60.1",
-    "rollup-plugin-babel": "^3.0.4"
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^3.0.5",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^4.0.0"
   }
 }
