--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "css-box-model",
   "version": "1.0.0",
-  "description": "Returns the css box model for a HTMLElement",
+  "description": "Get accurate and well named css box model information about a Element",
   "author": "Alex Reardon <alexreardon@gmail.com>",
   "license": "MIT",
   "keywords": [
     "css",
     "box model",
+    "css box model",
+    "getBoundingClientRect",
+    "DOMRect",
+    "ClientRect",
+    "Rect",
+    "Spacing",
     "DOM"
   ],
   "files": [
@@ -43,5 +49,8 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^4.0.0"
+  },
+  "dependencies": {
+    "tiny-invariant": "^1.0.1"
   }
 }
