--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,12 @@
 {
-  "presets": ["flow", ["env", { "modules": false, "loose": true }]],
-  "comments": false,
-  "plugins": ["transform-object-rest-spread"],
-  "env": {
-    "test": {
-      "plugins": ["transform-es2015-modules-commonjs"]
-    }
-  }
+  "presets": [
+    "@babel/flow",
+    [
+      "@babel/env",
+      {
+        "loose": true
+      }
+    ]
+  ],
+  "comments": false
 }
