--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
     "@babel/preset-flow": "^7.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "flow-bin": "^0.75.0",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "flow-bin": "^0.83.0",
     "jest": "^23.6.0",
     "prettier": "1.14.3",
     "rimraf": "^2.6.2",
-    "rollup": "^0.62.0",
+    "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^4.0.0"
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-uglify": "^6.0.0"
   },
   "dependencies": {
     "tiny-invariant": "^1.0.1"
