--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "name": "css-box-model",
   "version": "1.0.0",
-  "description": "Returns the css box model for a HTMLElement",
+  "description": "Get accurate and well named css box model information about an Element 📦",
   "author": "Alex Reardon <alexreardon@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atlassian/react-beautiful-dnd.git"
+  },
+  "bugs": {
+    "url": "https://github.com/atlassian/react-beautiful-dnd/issues"
+  },
   "keywords": [
     "css",
     "box model",
+    "css box model",
+    "getBoundingClientRect",
+    "DOMRect",
+    "ClientRect",
+    "Rect",
+    "Spacing",
     "DOM"
   ],
   "files": [
@@ -28,20 +41,24 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.75.0",
-    "jest": "^23.2.0",
-    "prettier": "1.13.7",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "flow-bin": "^0.83.0",
+    "jest": "^23.6.0",
+    "prettier": "1.14.3",
     "rimraf": "^2.6.2",
-    "rollup": "^0.62.0",
-    "rollup-plugin-babel": "^3.0.5",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^4.0.0"
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-uglify": "^6.0.0"
+  },
+  "dependencies": {
+    "tiny-invariant": "^1.0.1"
   }
 }
