--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "babel-plugin-dev-expression": "^0.2.1",
-    "flow-bin": "^0.98.1",
+    "flow-bin": "0.98.1",
     "jest": "^24.8.0",
     "prettier": "1.17.0",
     "rimraf": "^2.6.3",
