--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "scripts": {
     "test": "yarn jest",
     "lint": "yarn prettier --debug-check src/** test/**",
-    "typecheck": "yarn flow",
-    "validate": "yarn lint && yarn flow",
+    "validate": "yarn lint && flow check",
     "build:clean": "rimraf dist",
     "build:flow": "echo \"// @flow\n\nexport * from '../src';\" > dist/css-box-model.cjs.js.flow",
     "build:dist": "yarn rollup --config rollup.config.js",
@@ -45,8 +44,6 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^24.9.0",
     "babel-plugin-dev-expression": "^0.2.2",
     "flow-bin": "0.106.1",
     "jest": "^24.9.0",
@@ -54,10 +51,9 @@
     "rimraf": "^3.0.0",
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-uglify": "^6.0.2"
+    "rollup-plugin-terser": "^5.1.1"
   },
   "dependencies": {
     "tiny-invariant": "^1.0.6"
